--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,28 @@ img {
 #xyz h2 {
     margin-top: 2em;
 }
- #contact {
+
+#contact {
     margin-bottom: 5em;
+}
+
+.btn {
+    display: inline-block;
+    color: #000;
+    border: 2px outset rgba(0, 0, 0, 0.9);
+    background: #C0C0C0;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+    letter-spacing: 2px;
+    transition: 0.2s;
+}
+.btn:hover {
+    color: #fff;
+    border: 2px outset rgba(0, 0, 0, 0.9);
+    background: rgba(0,0,0, 0.9);
+    transform: scale(1.1);
+    transition: 0.2s;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+    letter-spacing: 2px;
 }
